dec prod release

--- a/data/pg/FSM/CommonFieldsConfig.json
+++ b/data/pg/FSM/CommonFieldsConfig.json
@@ -6,6 +6,21 @@
       "head": "ES_NEW_APPLICATION_PROPERTY_DETAILS",
       "body": [
         {
+          "label": "ES_NEW_APPLICATION_PROPERTY_ID",
+          "isMandatory": true,
+          "type": "component",
+          "route": "property-id",
+          "key": "propertyID",
+          "component": "SelectPropertyID",
+          "texts": {
+            "headerCaption": "",
+            "header": "CS_FILE_APPLICATION_PROPERTY_ID_LABEL",
+            "cardText": "CS_FILE_APPLICATION_PROPERTY_ID_TEXT",
+            "submitBarLabel": "CS_COMMON_NEXT"
+          },
+          "nextStep": "property-type"
+        },
+        {
           "label": "ES_NEW_APPLICATION_PROPERTY_TYPE",
           "isMandatory": true,
           "type": "component",
@@ -141,8 +156,24 @@
       "head": "CS_CHECK_PIT_SEPTIC_TANK_DETAILS",
       "body": [
         {
+          "label": "ES_NEW_APPLICATION_ROAD_WIDTH",
+          "isMandatory": true,
+          "type": "component",
+          "route": "road-details",
+          "key": "roadWidth",
+          "hideInEmployee": true,
+          "component": "SelectRoadDetails",
+          "texts": {
+            "header": "CS_FILE_PROPERTY_ROAD_WIDTH",
+            "cardText": "CS_FILE_PROPERTY_ROAD_WIDTH_TEXT",
+            "submitBarLabel": "CS_COMMON_NEXT",
+            "skipText": "CORE_COMMON_SKIP_CONTINUE"
+          },
+          "nextStep": "tank-size"
+        },
+        {
           "label": "ES_NEW_APPLICATION_PIT_TYPE",
-          "isMandatory": false,
+          "isMandatory": true,
           "type": "component",
           "route": "pit-type",
           "key": "pitType",
@@ -150,10 +181,9 @@
           "texts": {
             "header": "CS_FILE_PROPERTY_PIT_TYPE",
             "cardText": "CS_FILE_PROPERTY_PIT_TYPE_TEXT",
-            "submitBarLabel": "CS_COMMON_NEXT",
-            "skipText": "CORE_COMMON_SKIP_CONTINUE"
+            "submitBarLabel": "CS_COMMON_NEXT"
           },
-          "nextStep": "tank-size"
+          "nextStep": "road-details"
         },
         {
           "route": "tank-size",
@@ -199,7 +229,7 @@
             "submitBarLabel": "CS_COMMON_NEXT",
             "skipLabel": "CS_COMMON_SERVICE_SKIP_INFO"
           },
-          "nextStep": "property-type"
+          "nextStep": "property-id"
         },
         {
           "label": "a",
