--- a/data/pg/PropertyTax/CommonFieldsConfig.json
+++ b/data/pg/PropertyTax/CommonFieldsConfig.json
@@ -194,6 +194,60 @@
                 },
                 {
                     "type": "component",
+                    "isMandatory": true,
+                    "component": "Electricity",
+                    "key": "electricity",
+                    "withoutLabel": true
+                },
+                  {
+                    "type": "component",
+                    "isMandatory": true,
+                    "component": "UID",
+                    "key": "uid",
+                    "withoutLabel": true
+                },
+                  {
+                    "type": "component",
+                    "route": "electricity",
+                    "isMandatory": true,
+                    "component": "Electricity",
+                    "texts": {
+                        "headerCaption": "",
+                        "header": "PT_ASSESSMENT_FLOW_AREA_HEADER",
+                        "cardText": "PT_SELFOCCUPIED_AREA",
+                        "submitBarLabel": "PT_COMMON_NEXT"
+                    },
+                    "key": "units",
+                    "withoutLabel": true,
+                    "nextStep": {
+                        "yes": "rental-details",
+                        "no": "provide-sub-usage-type",
+                        "vacant": "map"
+                    },
+                    "hideInEmployee": true
+                },
+                 {
+                    "type": "component",
+                    "route": "uid",
+                    "isMandatory": true,
+                    "component": "UID",
+                    "texts": {
+                        "headerCaption": "",
+                        "header": "PT_ASSESSMENT_FLOW_AREA_HEADER",
+                        "cardText": "PT_SELFOCCUPIED_AREA",
+                        "submitBarLabel": "PT_COMMON_NEXT"
+                    },
+                    "key": "units",
+                    "withoutLabel": true,
+                    "nextStep": {
+                        "yes": "rental-details",
+                        "no": "provide-sub-usage-type",
+                        "vacant": "map"
+                    },
+                    "hideInEmployee": true
+                },
+                {
+                    "type": "component",
                     "route": "area",
                     "isMandatory": true,
                     "component": "Area",
