--- a/data/pg/Workflow/BusinessServiceConfig.json
+++ b/data/pg/Workflow/BusinessServiceConfig.json
@@ -6,6 +6,10 @@
       "code": "NEWTL",
       "isStateLevel": true
     },
+	{
+      "code": "BPA",
+      "isStateLevel": true
+    },
     {
       "code": "FIRENOC",
       "isStateLevel": true
