--- a/data/pg/Workflow/BusinessServiceMasterConfig.json
+++ b/data/pg/Workflow/BusinessServiceMasterConfig.json
@@ -7,6 +7,11 @@
         "active": "true",
         "isStatelevel": "true"
       },
+	  {
+        "businessService": "BPA",
+        "active": "true",
+        "isStatelevel": "true"
+      },
       {
         "businessService": "PGR",
         "active": "true",
