--- a/data/hp/Workflow/BusinessServiceMasterConfig.json
+++ b/data/hp/Workflow/BusinessServiceMasterConfig.json
@@ -5,7 +5,7 @@
       {
         "businessService": "NewTL",
         "active": "true",
-        "isStatelevel": "true"
+        "isStatelevel": "false"
       },
 	  {
         "businessService": "BPA",
