--- a/data/hp/citya/FinanceService/BankAccountServiceMapping.json
+++ b/data/hp/citya/FinanceService/BankAccountServiceMapping.json
@@ -1,5 +1,5 @@
 {
-  "tenantId": "pg.citya",
+  "tenantId": "hp.citya",
   "moduleName": "FinanceModule",
   "BankAccountServiceMapping": [
     {
@@ -7,28 +7,28 @@
       "bankAccount": "000000000001",
       "bank": "Allahabad UP Gramin Bank",
       "bankBranch": "001",
-      "tenantId": "pg.citya"
+      "tenantId": "hp.citya"
     },
     {
       "businessDetails": "TL",
       "bankAccount": "63897421",
       "bank": "HDFC Bank",
       "bankBranch": "HDFC147",
-      "tenantId": "pg.citya"
+      "tenantId": "hp.citya"
     },
     {
       "businessDetails": "TL",
       "bankAccount": "2042417454076",
       "bank": "ICICI Bank",
       "bankBranch": "ICIC550",
-      "tenantId": "pg.citya"
+      "tenantId": "hp.citya"
     },
     {
       "businessDetails": "FIRENOC",
       "bankAccount": "2042417454076",
       "bank": "ICICI Bank",
       "bankBranch": "ICIC550",
-      "tenantId": "pg.citya"
+      "tenantId": "hp.citya"
     } 
   ]
 }
