--- a/data/hp/Workflow/BusinessServiceMasterConfig.json
+++ b/data/hp/Workflow/BusinessServiceMasterConfig.json
@@ -16,7 +16,11 @@
         "businessService": "PGR",
         "active": "true",
         "isStatelevel": "true"
-      }
-        
+      },
+	  {
+        "businessService": "GarbageCollection",
+        "active": "true",
+        "isStatelevel": "false"
+      }        
     ]
   }
