--- a/data/hp/Workflow/BusinessServiceMasterConfig.json
+++ b/data/hp/Workflow/BusinessServiceMasterConfig.json
@@ -21,6 +21,11 @@
         "businessService": "GarbageCollection",
         "active": "true",
         "isStatelevel": "false"
+      },
+	  {
+        "businessService": "PTR",
+        "active": "true",
+        "isStatelevel": "false"
       }        
     ]
   }
