commit bank name changes for Payment Service

--- a/data/hp/citya/FinanceService/BankAccountServiceMapping.json
+++ b/data/hp/citya/FinanceService/BankAccountServiceMapping.json
@@ -12,8 +12,8 @@
     {
       "businessDetails": "TL",
       "bankAccount": "63897421",
-      "bank": "HDFC Bank",
-      "bankBranch": "HDFC147",
+      "bank": "AXIS Bank",
+      "bankBranch": "AXIS",
       "tenantId": "hp.citya"
     },
     {
