--- a/data/hp/Workflow/BusinessServiceMasterConfig.json
+++ b/data/hp/Workflow/BusinessServiceMasterConfig.json
@@ -26,6 +26,11 @@
         "businessService": "PTR",
         "active": "true",
         "isStatelevel": "false"
-      }        
+      },
+	  {
+          "businessService": "ADVT",
+          "active": "true",
+          "isStatelevel": "false"
+      }
     ]
   }
