--- a/data/hp/Workflow/BusinessServiceMasterConfig.json
+++ b/data/hp/Workflow/BusinessServiceMasterConfig.json
@@ -23,7 +23,7 @@
         "isStatelevel": "false"
       },
 	  {
-        "businessService": "PTR",
+        "businessService": "pet-services",
         "active": "true",
         "isStatelevel": "false"
       },
