Commit MDMS changes for Community Hall booking

--- a/data/hp/Workflow/BusinessServiceConfig.json
+++ b/data/hp/Workflow/BusinessServiceConfig.json
@@ -13,6 +13,10 @@
     {
       "code": "FIRENOC",
       "isStateLevel": true
+    },
+	{
+      "code": "SITE",
+      "isStateLevel": true
     }
   ]
 }
