--- a/data/hp/Workflow/BusinessServiceMasterConfig.json
+++ b/data/hp/Workflow/BusinessServiceMasterConfig.json
@@ -31,6 +31,16 @@
           "businessService": "ADVT",
           "active": "true",
           "isStatelevel": "false"
+      },
+	  {
+          "businessService": "AST",
+          "active": "true",
+          "isStatelevel": "false"
+      },
+	  {
+          "businessService": "SITE",
+          "active": "true",
+          "isStatelevel": "true"
       }
     ]
   }
